--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>龍華大學</h1>
-    <img src="https://www.lhu.edu.tw/img/logo.svg" alt="龍華校徽" width="200">
-    <p>學號: 12345678</p>
+    <!-- 替換為有效的圖片 URL -->
+    <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Lhu_logo.svg" alt="龍華校徽" width="200">
+    <p>學號: E1124181050</p>
 </body>
 </html>
