--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>龍華大學</h1>
     <!-- 替換為有效的圖片 URL -->
-    <img src="https://secretary.lhu.edu.tw/var/file/35/1035/img/586481327.png" alt="龍華校徽" width="200">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Lhu_logo.svg" alt="龍華校徽" width="200">
     <p>學號: E1124181050</p>
 </body>
 </html>
