--- a/index.html
+++ b/index.html
@@ -4,11 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>龍華大學網站</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin-top: 50px;
+        }
+        img {
+            width: 200px;
+            border-radius: 8px;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            font-size: 18px;
+            color: #555;
+        }
+    </style>
 </head>
 <body>
     <h1>龍華大學</h1>
-    <!-- 更新圖片的 URL -->
-    <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Lhu_logo.svg" alt="龍華校徽" width="200">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Lhu_logo.svg" alt="龍華校徽">
     <p>學號: E1124181050</p>
 </body>
 </html>
