--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 </head>
 <body>
     <h1>龍華大學</h1>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Lhu_logo.svg" alt="龍華校徽">
+    <!-- 更新圖片的 URL -->
+    <img src="https://upload.wikimedia.org/wikipedia/zh/thumb/7/77/Lunghwa_University_of_Science_and_Technology_emblem.svg/200px-Lunghwa_University_of_Science_and_Technology_emblem.svg.png" alt="龍華校徽">
     <p>學號: E1124181050</p>
 </body>
 </html>
+
