--- a/index.html
+++ b/index.html
@@ -25,9 +25,15 @@
 </head>
 <body>
     <h1>龍華大學</h1>
-    <!-- 更新圖片的 URL -->
+    <!-- 使用您提供的圖片 URL -->
     <img src="https://upload.wikimedia.org/wikipedia/zh/thumb/7/77/Lunghwa_University_of_Science_and_Technology_emblem.svg/200px-Lunghwa_University_of_Science_and_Technology_emblem.svg.png" alt="龍華校徽">
     <p>學號: E1124181050</p>
+    
+    <!-- 圖片來源和版權 -->
+    <p>下載自 <a rel="nofollow" class="external free" href="https://ncs.lhu.edu.tw/index.php/s/DHy2p8HrToJ4HHj">龍華大學官方網站</a></p>
+    <p>根據 <a href="//zh.wikipedia.org/wiki/File:Lunghwa_University_of_Science_and_Technology_emblem.svg" title="合理使用龍華科技大學上下文中受版權保護的材料">合理使用</a> 進行使用。</p>
+    <p>詳情請參閱 <a href="https://zh.wikipedia.org/w/index.php?curid=8293443">連結</a>。</p>
 </body>
 </html>
+
 
